test/selfTest/MYtest_01.out
Error type 13 at Line 3: the type of operands of "." must be a structure.
Error type 13 at Line 4: the type of operands of "." must be a structure.