test/selfTest/MYtest_01.spl
int main() {
  int rect;
  rect.length = 10;
  rect.width = 20;
  return 0;
}